# Wiwi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  debug_init.py  llamacpp.py  pyproject.toml  requirements.txt  run.sh  run_test_py.sh  test_bot_py.py  test_chatterbox_rtf.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
config/: default.yaml  example.yaml
docs/: ARCHITECTURE.md  BIGVGAN_ADAPTER_TRAINING.md  DISCORD.md  MODULES.md  SYSTEM.md  start.md
plugins/: __init__.py
scripts/: test_tts_speed.py
wiwi/: __init__.py  __main__.py
wiwi/core/: __init__.py  config_loader.py  event_bus.py  exceptions.py  kernel.py  registry.py
wiwi/interfaces/: __init__.py  base_module.py  messages.py  ports.py
wiwi/modules/: __init__.py
wiwi/modules/cli_interface/: __init__.py  module.py
wiwi/modules/discord/: __init__.py  module.py  sounds.py  streaming_audio.py  wake_word.py
wiwi/modules/llm_brain/: __init__.py  module.py
wiwi/modules/llm_brain/backends/: __init__.py  base.py  llama_cpp.py  llama_server.py
wiwi/modules/memory/: __init__.py  module.py
wiwi/modules/stt/: __init__.py  audio_capture.py  module.py  vad.py
wiwi/modules/stt/backends/: __init__.py  base.py  faster_whisper.py
wiwi/modules/tts/: __init__.py  audio_output.py  module.py
wiwi/modules/tts/backends/: __init__.py  base.py  benchmark_xtts.py  build_xtts_trt.py  chatterbox.py  debug_xtts_inference.py  export_xtts_onnx.py  test_xtts_trt_backend.py  xtts.py  xtts_trt_backend.py  your_tts.py
wiwi/utils/: __init__.py  logging_setup.py
